--- a/frontend/premium.css
+++ b/frontend/premium.css
@@ -123,12 +123,22 @@ header .header{
   }
   
   body {
-    background-color: #328f8a;
-    background-image: linear-gradient(45deg,#edeccf,#ac9e08);
+    background-image: url(https://greatperformersacademy.com/images/images/Articles_images/Saving-money-not-feeling-deprived.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    -ms-overflow-style: none;
+    scrollbar-width: 5px;
+    scroll-behavior: smooth,initial,inherit;
+    animation: gradient 20s ease infinite;
+    height: 100vh;
     font-family: "Roboto", sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
   }
+  body::-webkit-scrollbar {
+    display: 5px;
+  }
+   
+    
+  
 
 
   ul {
